Fix for bug 216060. Messages not deleted from Drafts folder [IMAP account]  when they are sent if you clicked "Send later" r=bienvenu sr=mscott